[package]
name          = "heph-http"
description   = "Heph-HTTP is a HTTP library build on top of Heph."
version       = "0.1.0"
publish       = false # In development.
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT"
documentation = "https://docs.rs/heph-http"
repository    = "https://github.com/Thomasdezeeuw/heph/tree/main/http"
readme        = "README.md"
keywords      = ["http", "async"]
categories    = ["asynchronous", "web-programming"]
include       = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE"]
edition       = "2021"

[dependencies]

[dev-dependencies]
std-logger = { version = "0.5.3", default-features = false, features = ["log-panic", "nightly"] }

[dev-dependencies.heph]
path     = "../"
features = ["test"]


[dev-dependencies.heph-rt]
path     = "../rt"
features = ["test"]
